fix:Modify personal information, button misaligned

--- a/src/Web/Masa.Mc.Web.Admin/wwwroot/css/mc-admin.css
+++ b/src/Web/Masa.Mc.Web.Admin/wwwroot/css/mc-admin.css
@@ -280,6 +280,10 @@
     margin-top: 14px !important;
 }
 
+.masa-stack-components .m-input--dense-48 .m-input__append-inner {
+    margin-top: 0px !important;
+}
+
 .m-application .overflow-x-visible {
     overflow-x: visible !important;
 }
